--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1089,37 +1089,12 @@ main {
     border-radius: 15px;
 }
 
-.product-card-title , 
-.product-card-reference,
-.product-card-price {
-    font-size: 1em;
-    font-weight: 400;
-    line-height:1.125em ;
-    
-}
-
-.product-card-title{
-        height: 36px;
-        display: -webkit-box;
-        line-clamp: 2;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;  
-        overflow: hidden;
-        text-overflow: ellipsis;
-}
 
 .product-card-reference{
     padding-top: 25px;
     padding-bottom: 16px;
     font-size: 12px;
     font-weight: 300;
-
-}
-
-.product-card-price {
-    font-size: 1.5em;
-    font-weight: 700;
-    padding-bottom: 12px;
 }
 
 .product-card-installment {
@@ -1132,26 +1107,10 @@ main {
     display: flex;
     flex-direction: column;
     background-color: #ffffff; 
-    padding:16px;
     flex-grow: 0;
     flex-shrink: 0;
     flex-basis: 200px;
-    border-radius: 15px;
-    box-shadow: 2px 4px 4px 1px rgba(0, 0, 0, 0.04);
-}
-
-.product-card img {
-    width:100%;
-    border-radius: 15px;
-    object-fit: cover;
-}
-
-.product-card-btn {
-    width: 100%;
-    padding: 5px 20px;
-    background-color: #ffffff;
-    border-radius: 15px;
-    color: #000;
+    height: 27.25rem;
 }
 
 .products-container {
@@ -1302,7 +1261,6 @@ main {
     font-weight: 700;
     padding-bottom: 16px;
     line-height: 18px;
-
 }
 
 .product_price_container h5{
@@ -1310,7 +1268,6 @@ main {
     font-weight: 400;
     padding-bottom: 10px;
     line-height: 18px;
-
 }
 
 .quantity {
