--- a/styles/styles_home.css
+++ b/styles/styles_home.css
@@ -87,6 +87,10 @@
     transition: 0.75s;
 }
 
+.icons{
+    size: 3rem;
+}
+
 .nav-items a {
     margin-left: 1.25rem;
 }
@@ -133,7 +137,7 @@
     color: white;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-inline: 11.95rem;
 }
 
@@ -199,6 +203,38 @@
     justify-content: space-between;
     max-width: 90%;
 
+}
+.product-card-title{
+    font-size: 1rem;
+    color: #000000;
+    height: 1rem;
+}
+
+.product-card-price{
+    font-size: 1.3rem;
+    color: #333;
+    font-family:'Times New Roman', Times, serif;
+}
+
+.product-card img{
+    width: 12.5rem;
+    height: 12.5rem;
+}
+
+.product-card-btn{
+    width: 100%;
+    margin-top: 1rem;
+    padding: 0.625rem 1.25rem;
+    background-color: #000000;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+.product-card-btn:hover{
+    border: solid 0.0625rem #383838;
+    background-color: rgb(245, 245, 245);
+    color: #383838;
+    transition: 0.5s;
 }
 
 
