--- a/styles/styles_home.css
+++ b/styles/styles_home.css
@@ -22,13 +22,15 @@ main{
     width: 100%;
     background: #ffffff;
     z-index: 9;
+    padding-inline: 11.95rem;
 }
 
 .nav {
     display: flex;
     justify-content: space-between;
-    padding: 1rem;
-    padding-inline: 11.95rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    width: 96.1rem;
 }
 
 .logo {
@@ -144,6 +146,7 @@ main{
     flex-direction: row;
     justify-content: space-between;
     margin-inline: 11.95rem;
+    width: 96.1rem;
 }
 
 .banner button:hover {
@@ -472,14 +475,10 @@ main{
         grid-area: col1;
         padding:25px
     }
-    
-    .grid_col_2 {
-        grid-area: col2;
-        padding: 25px;
-    }
+
     
     
-    #product_page, #checkout, #billing{
+    #checkout, #billing{
         display: grid;
         column-gap: 32px;
         grid-template-columns: 2fr 1fr;
@@ -617,9 +616,9 @@ main{
    ------------------------------ */
 
 footer {
-    padding-inline: 11.95rem;
+    margin-inline: 11.95rem;
     margin-top: 2.5rem;
-    width: 100%;
+    width: 96.1rem;
     bottom: 0;
 }
 
@@ -690,6 +689,75 @@ footer {
     grid-template-columns: repeat(3, 1fr);
 }
 
+.filters {
+    width: 400px; 
+    background-color: #f9f9f9;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    height: 33rem;
+}
+
+.filters h3 {
+    margin-bottom: 20px;
+    text-align: center;
+}
+.filters h4 {
+    margin-bottom: 0px;
+}
+
+.filter_category {
+    margin-bottom: 20px; 
+}
+
+.filter_category h4 {
+    font-size: 18px; 
+    margin-bottom: 10px;
+}
+
+.filter_category ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.filter_category li {
+    margin-bottom: 5px; 
+}
+
+.color_list {
+    list-style-type: none; 
+    padding: 0; 
+    display: flex; 
+    flex-wrap: wrap; 
+}
+
+.color_list li {
+    display: flex; 
+    align-items: center; 
+    margin: 5px; 
+}
+.size_list {
+    display: grid; 
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 10px; 
+    list-style-type: none; 
+    padding: 15px;
+}
+
+.size_box {
+    display: flex; 
+    justify-content: center;
+    align-items: center; 
+    width: 100%; 
+    height: 40px; 
+    background-color: #ffffff; 
+    border: none; 
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); 
+    cursor: pointer; 
+    transition: transform 0.2s;
+}
+
 
 /* adm.html */
 
@@ -700,4 +768,310 @@ footer {
 .footer-especial{
     position: fixed;
     bottom:0px;
+}
+
+
+/* product.html */
+#product_page, #checkout, #billing{
+    display: grid;
+    column-gap: 32px;
+    grid-template-columns: 2fr 1fr;
+    grid-template-areas: "col1 col2";
+}
+
+.product.text-container.page-title-small {
+    margin-top: 24px;
+}
+
+.product.text-container {
+    margin: 10 0;
+}
+
+.product.text-container h4 {
+    font-weight: 400;
+    font-size: 0.875em;
+    padding-bottom: 5px;
+}
+
+.product.main-text {
+    font-size:1.2em;
+}
+
+/* product page grid */
+
+.product_images_container{
+    display: flex;
+    column-gap: 32px;
+}
+
+.images_selector{
+    
+    align-items: center;
+   
+}
+
+.bi::before, [class*=" bi-"]::before, [class^=bi-]::before {
+    padding: 6px;
+    font-size: 24px;
+    display: inline-block;
+    font-style: normal;
+    font-weight: 900 !important;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    vertical-align: -0.125em;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+
+.images_selector li{
+    list-style: none;
+ }
+
+.product_thumb {
+    width: 100%;
+}
+
+.images_main {
+    flex-basis: 565px;
+}
+
+.images_main img{
+    width: 100%;
+}
+
+#product-category{
+    margin: 0;
+    padding: 0;
+    color:#555;
+}
+
+.product_description_container {
+    padding-top: 32px;
+}
+
+.product_description_container h3.main-text{
+    padding: 20px 0 12px;
+    font-size: 1.2em;
+}
+
+.product_description_container p{
+   line-height: 24px;
+   padding-bottom: 32px;
+}
+
+.product_price_container {
+    padding-bottom: 40px;
+}
+
+.product_price_container h2{
+    font-size: 2em;
+    font-weight: 700;
+    padding-bottom: 16px;
+    line-height: 18px;
+}
+
+.product_price_container h5{
+    font-size: 0.875em;
+    font-weight: 400;
+    padding-bottom: 10px;
+    line-height: 18px;
+}
+
+.products_images_container{
+    width: 100%;
+}
+ 
+.product_text-container{
+    display: flex;
+}
+
+#product-title{
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+}
+
+#product-title h4{
+    margin: 0;
+    padding: 0;
+    color: transparent;
+    font-size: 1px;
+}
+
+.product_main-text{
+    font-size: 2rem;
+    padding-top: 0;
+}
+
+.quantity {
+    display: flex;
+    justify-content: center;
+    column-gap: 16px;
+}
+
+.quantity input{
+    border:1px solid #000;
+    border-radius: 5px;
+    padding:4px 8px;
+    width: 100%;
+    font-size: 20px;
+}
+
+.shop_btn {
+    padding: 16px 32px;
+    color: white;
+    border-radius: 5px;
+    border: none;
+    text-transform: uppercase;
+    background-color: #000;
+}
+
+.shop_btn:hover {
+    background-color: #252525;
+}
+
+.freight_container {
+    border: 1px solid #000;
+    padding: 8px 16px;
+    border-radius: 5px;
+    margin-bottom: 30px;
+}
+
+.freight_container .container-flex{
+    border-radius: 5px;
+    margin: 8px 0px 5px;
+    column-gap: 5px;
+}
+
+.freight_container form label{
+   font-size: 0.875em;
+}
+
+.freight_container form input[type="text"]{
+    border:1px solid #000;
+    border-radius: 5px;
+    padding:4px 8px;
+    width: 100%;
+ }
+
+/* about-us.html */
+
+.about-us {
+    margin-inline: 15rem; /* Espaçamento lateral */
+    margin-block: 2rem; /* Espaçamento superior e inferior */
+    font-family: 'Raleway', sans-serif; /* Fonte */
+    color: #333; /* Cor do texto */
+    line-height: 1.6; /* Altura da linha */
+}
+
+.about-us h2, .about-us h3 {
+    text-align: left;
+    color: #222; /* Cor dos títulos */
+    margin-bottom: 1rem; /* Espaçamento abaixo dos títulos */
+}
+
+.about-us p {
+    margin-bottom: 1.5rem; /* Espaçamento entre os parágrafos */
+    text-align: justify; /* Justificação do texto */
+}
+
+.about-us ul {
+    margin-top: 1rem; /* Espaçamento acima da lista */
+    padding-left: 1.5rem; /* Recuo da lista */
+}
+
+.about-us li {
+    margin-bottom: 0.5rem; /* Espaçamento entre itens da lista */
+}
+
+.about-us ul li strong {
+    color: #555; /* Destaque para os valores */
+}
+
+.about-us h3 {
+    margin-top: 3rem; /* Espaçamento acima dos subtítulos */
+    font-size: 1.5rem; /* Tamanho dos subtítulos */
+}
+
+.about-us {
+    margin-inline: 15rem; /* Espaçamento lateral */
+    margin-block: 2rem; /* Espaçamento superior e inferior */
+    position: relative; /* Para manipular o posicionamento dos filhos */
+    font-family: 'Raleway', sans-serif;
+}
+
+.about-us div {
+    display: flex; /* Layout em linha */
+    position: relative; /* Para posicionamento */
+}
+.about-us_div-img{
+    height: 32.125rem;
+}
+#about_alphaco{
+    color:  #ffffff;
+    text-align: left;
+    font-size: 5rem;
+    padding-bottom: 2rem;
+}
+.about-us_banner{
+    display: flex;
+    padding-inline: 11.95rem;
+    justify-content: center;
+}
+
+#imagem {
+    position: absolute; /* Para que o texto possa ser colocado sobre ela */
+    left: 11.95rem;
+    z-index: -1; /* Coloca a imagem atrás do texto */
+   width: 96.1rem;
+}
+
+#texto {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem; /* Espaçamento interno para legibilidade */
+    border-radius: 0.5rem; /* Bordas arredondadas */
+    max-width: 60%; /* Limita a largura do texto */
+    color: #d1d1d1;
+}
+#texto p{
+    font-size: 1.4rem
+}
+
+/* checkout.html */
+.product_main-content_container{
+    display: flex;
+    flex-direction: column;
+}
+
+.cart_item_main_img{
+    width: 5rem;
+    height: auto;
+}
+
+.cart_item_info{
+    width: 15rem;
+}
+
+.cart_item_info p:first-child {
+    font-size: 0.875em;
+    font-weight: 700;
+    padding: 0;
+    padding-bottom: 5px;
+}
+
+.cart_item_info p:nth-child(2) {
+    font-size: 0.875em;
+    font-weight: 400;
+    padding: 0;
+    padding-bottom: 10px;
+}
+
+.cart_item_info h3{
+    font-size: 1.2em;
+    font-weight: 700;
+    padding: 0;
+    padding-bottom: 8px;
 }
